--- a/result.html
+++ b/result.html
@@ -13,5 +13,6 @@
     {% else %}
         <p>The machine is predicted to be functioning properly.</p>
     {% endif %}
+    <a href="/"><button>Back to Home</button></a>
 </body>
 </html>
